# game

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/levels/: test_movement.glb
src/: fps_controller.rs  main.rs  map.rs  player.rs
