[package]
name = "game"
version = "0.2.8"
edition = "2021"

[dependencies]
bevy = "0.12.1"
clap = { version = "4.4.11", features = ["derive"] }
self_update = "0.39.0"
bevy_editor_pls = { version = "0.7.0", optional = true }

[features]
default = ["debug", "editor"]
debug = ["bevy/dynamic_linking"]
editor = ["bevy_editor_pls"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
