[package]
name = "game"
version = "0.2.8"
edition = "2021"

[features]
default = ["dynamic_linking"]
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.12.1"
clap = { version = "4.4.11", features = ["derive"] }
self_update = "0.39.0"
bevy_rapier3d = { version = "0.23.0", features = ["debug-render-3d"] }

[dev-dependencies]
bevy_editor_pls = { version = "0.7.0" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
